Final Commit- remove bookmark function

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
         <!-- Select Bookmark box -->
         <div class="add-overlay" id="overlay">
             <div class="overlay-box">
+                <div class="close-overlay">
+                    <i class="fa fa-times" id="close"></i>
+                </div>
                 <form action="">
-                    <input type="text" name="name" id="new-name" placeholder="Pick a Name For Your bookmark">
-                    <input type="url" name="url" id="new-url" placeholder="Enter Your Bookmark URL">
+                    <input type="text" name="name" id="new-name" placeholder="Pick a Name For Your bookmark" >
+                    <input type="url" name="url" id="new-url" placeholder="Enter Your Bookmark URL" >
                     <button type="submit" id="addNewBookmark" class="btn">Add Bookmark</button>
                 </form>
             </div>
